help spacing issue resolved

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -64,8 +64,8 @@
 
     @media (max-width: 570px) {
       width: 100%;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(5, 1fr);
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
       grid-gap: 2rem;
     }
 
@@ -85,6 +85,7 @@
         grid-row: 1/3;
         grid-column: 1/2;
         height: 100%;
+        display: none;
       }
     }
     .div2 {
@@ -92,7 +93,7 @@
       grid-row: 1/2;
       background-color: #4ca3b8;
       @media (max-width: 570px) {
-        grid-column: 2/-1;
+        grid-column: 1/2;
         grid-row: 1/2;
       }
     }
@@ -135,6 +136,7 @@
       @media (max-width: 570px) {
         grid-column: 2/3;
         grid-row: 2/3;
+        display: none;
       }
     }
   }
