--- a/src/styles/pages/_help.scss
+++ b/src/styles/pages/_help.scss
@@ -168,8 +168,8 @@
       }
     }
     &_body {
-      font-size: 1.6rem;
-      line-height: 2.1;
+      font-size: 1.4rem;
+      line-height: 1.55;
       color: $color-light-black;
       font-weight: 400;
       letter-spacing: 0.05rem;
